Additional tap events and safety; solved overlapping button issue

--- a/app/assets/stylesheets/base/_selectors.scss
+++ b/app/assets/stylesheets/base/_selectors.scss
@@ -1,1 +1,1 @@
-$tappable-and: 'body:not(.no-tap) &';
+$tap-this: 'body:not(.no-tap) &:active';
